ENG-14774: Guarantee that the larger protection groups are first
Instead of creating protection groups and filling them immediatly.
Create all protection groups and reverse sort them by size and then fill
the largest groups with the lowest partition IDs.

Enhance tests to enforce this behavior.